<resources>
    <string name="app_name">Crediverse</string>
    <string name="permissions_needed">Permissions Needed</string>
    <string name="location">Location</string>
    <string name="read_sms">Read SMS</string>
    <string name="make_phone_calls">Make Phone Calls</string>
    <string name="permission_reason_location">Required for analytics</string>
    <string name="permission_reason_read_sms">In order to auto-fill your OTP</string>
    <string name="permission_reason_make_calls">In order to retrieve the IMSI for added security</string>
    <string name="active">Active</string>
    <string name="suspended">Suspended</string>
    <string name="deactivated">Deactivated</string>
    <string name="permanent">Permanent</string>
    <string name="version_string">Version: <![CDATA[<b>%1$s</b>]]></string>
    <string name="version_deprecation_string">Your app will stop working:</string>
    <string name="newer_version">Newer version available:</string>
    <string name="version_contact_operator">Please contact your network operator to get it!</string>
    <string name="version_choose_to_install">Choose <![CDATA[<i>%1$s</i>]]> to install it</string>
    <string name="get_version_error">Unable to get version information</string>
    <string name="app_version_android_url_handling_error">Unable to determine URL handler<![CDATA[<br><br>]]>The URL <![CDATA[<b>%1$s</b>]]> has been <![CDATA[<i>copied</i>]]> to your clipboard</string>
    <string name="image_logo_text">Company Logo</string>
    <string name="account_info">Account Info</string>
    <string name="map_location">Map Location</string>
    <string name="about_us_dropdown_text">About</string>
    <string name="about_us">Crediverse Agent App</string>
    <string name="build_string">Build: <![CDATA[<b>%1$s</b>]]></string>
    <string name="logout">Logout</string>
    <string name="team_dashboard">Team Dashboard</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="sell">Sell</string>
    <string name="execu_stats">Execu Stats</string>
    <string name="buy">Buy</string>
    <string name="buy_credit">Buy Credit</string>
    <string name="profit">Profit</string>
    <string name="airtime">Airtime</string>
    <string name="data">Data</string>
    <string name="sms">SMS</string>
    <string name="transact">Transact</string>
    <string name="transfer">Transfer</string>
    <string name="recipient">Recipient</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="bundle">Bundle</string>
    <string name="bundle_list">Bundle List</string>
    <string name="history">History</string>
    <string name="analytics">Analytics</string>
    <string name="stats">Stats</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="c_ok">OK</string>
    <string name="later">Later</string>
    <string name="ref_prefix">Ref: %s</string>
    <string name="from_prefix">From - %s</string>
    <string name="to_prefix">To - %s</string>
    <string name="go_back">Go Back</string>
    <string name="back">Back</string>
    <string name="balance">Stock Balance</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_status">Unknown Status</string>
    <string name="personal">Personal</string>
    <string name="account">Account</string>
    <string name="reference_number">Reference Number</string>
    <string name="source_to_destination">%1$s to %2$s</string>
    <string name="please_confirm">Please Confirm?</string>
    <string name="missing_imsi_permission">To use the app, we need the \"make phone calls\" permission to be granted in order to authorise you with the mobile operator.\n\nPlease agree to the permission request by restarting the app or reinstalling</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="problem">Problem</string>
    <string name="date_and_time">Date and Time</string>
    <string name="invalid_amount_dialog">Please check the amount you entered, must be a number and more than zero</string>
    <string name="more">More</string>
    <string name="busy">Busy</string>
    <string name="teams">Teams</string>
    <string name="team">Team</string>
    <string name="my_team">My Team</string>
    <string name="my_stats">My Stats</string>
    <string name="team_member">Team Member</string>
    <string name="team_members">Team Members</string>
    <string name="member_info">Member Info</string>
    <string name="agent">Agent</string>
    <string name="agent_name">Agent Name</string>
    <string name="gross_retail_total">Gross Retail Sales Global Total</string>
    <string name="already_showing">Already showing</string>
    <string name="not_applicable">N/A</string>
    <string name="c_not_set">not set</string>
    <string name="err">Err</string>
    <string name="weekday_abbreviation_monday">Mo</string>
    <string name="weekday_abbreviation_tuesday">Tu</string>
    <string name="weekday_abbreviation_wednesday">We</string>
    <string name="weekday_abbreviation_thursday">Th</string>
    <string name="weekday_abbreviation_friday">Fr</string>
    <string name="weekday_abbreviation_saturday">Sa</string>
    <string name="weekday_abbreviation_sunday">Su</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="just_now">Just now</string>
    <string name="in_a_moment">in a moment</string>
    <string name="a_moment_ago">a moment ago</string>
    <string name="x_minutes">%d minute(s)</string>
    <string name="x_hours">%d hour(s)</string>
    <string name="x_days">%d day(s)</string>
    <string name="x_weeks">%d week(s)</string>
    <string name="time_future_tense">in %s</string>
    <string name="time_past_tense">%s ago</string>
    <string name="login_title">%1$s Login</string>
    <string name="login">Login</string>
    <string name="msisdn_hint">Phone Number</string>
    <string name="pin_hint">Pin</string>
    <string name="otp_hint">One Time Pin</string>
    <string name="check_sms_for_otp">Check your SMSs for your OTP</string>
    <string name="otp_verify_failed">Verification of OTP unsuccessful</string>
    <string name="forced_logout">Your session has expired, please login again</string>
    <string name="logout_upgrade_required">Could not process your request, App Upgrade Required</string>
    <string name="download">Download</string>
    <string name="navigation_title">Crediverse Navigation</string>
    <string name="nav_history_limit_reached">Can\'t go back anymore<![CDATA[<br><br><b>Press back again to logout</b>]]></string>
    <string name="cache_fault">App Cache is corrupt, please delete the app cache to continue</string>
    <string name="account_number">Account # %s</string>
    <string name="title">Title</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="language">Language</string>
    <string name="state">State</string>
    <string name="tier_name">Tier Name</string>
    <string name="close_account_info_floating_button_description">Close Account Info</string>
    <string name="update_account_information">Update Account Information</string>
    <string name="update_profile_success">Update Profile successful</string>
    <string name="account_information">Account Information</string>
    <string name="get_account_info_busy">Still busy getting account info from server</string>
    <string name="get_account_info_failure">There was a problem getting your account info, please try again later</string>
    <string name="invalid_old_pin">Old pin is incorrect</string>
    <string name="change_pin_success">PIN change successful</string>
    <string name="change_pin_failure">Could not change pin. Please check the pin format and don\'t reuse your last few pins.</string>
    <string name="change_pin_oneline">Change PIN</string>
    <string name="map_location_text">Map\nLocation</string>
    <string name="change_pin">Change\nPIN</string>
    <string name="update_info">Update\nInfo</string>
    <string name="update_info_online">Update Info</string>
    <string name="email_hint">Email Address</string>
    <string name="old_pin_hint">Enter your OLD pin</string>
    <string name="new_pin_hint">Enter your NEW pin</string>
    <string name="old_pin">Old pin</string>
    <string name="new_pin">New pin</string>
    <string name="my_location_text">My Location</string>
    <string name="make_language_change_effective">To make the language change effective, you will need to logout.\n\nLogout now?</string>
    <string name="title_mr">Mr.</string>
    <string name="title_mrs">Mrs.</string>
    <string name="title_miss">Miss</string>
    <string name="hello_prefix">Hello %s</string>
    <string name="total_balance">Total Stock Balance</string>
    <string name="on_hold_balance">On Hold Balance</string>
    <string name="bonus_balance">Trade Bonus Provision</string>
    <string name="target">target</string>
    <string name="achieved">Achieved</string>
    <string name="weekly_sales">Weekly Sales</string>
    <string name="weekly_target">Weekly Target</string>
    <string name="show_balances">Show balances</string>
    <string name="buy_credit_get_balance_error">Problem getting your Mobile Money balance</string>
    <string name="buy_credit_from_mm_title">Buy Credit with Moov Money</string>
    <string name="buy_credit_amount_hint">Amount</string>
    <string name="buy_credit_amount_prefix">Your Moov Money Balance: </string>
    <string name="buy_credit_description">Enter Moov Money Amount in exchange for Credit:</string>
    <string name="buy_credit_success">Successfully Purchased\n<![CDATA[<b>%1$s</b>]]></string>
    <string name="buy_credit_invalid_amount">Moov Money Amount cannot be empty or negative</string>
    <string name="transfer_credit">Transfer Credit</string>
    <string name="transfer_amount_hint">Credit amount</string>
    <string name="transfer_confirm">You will transfer a credit amount of <![CDATA[<b>%1$s</b>]]> to <![CDATA[<b>%2$s</b>]]>.\nAre you sure?</string>
    <string name="transfer_success_title">Credit Transferred</string>
    <string name="transfer_success_text">Successfully transferred <![CDATA[<b>%1$s</b>]]> to <![CDATA[<b>%2$s</b>]]></string>
    <string name="transfer_failure_title">Problem with transfer</string>
    <string name="transfer_error_invalid_channel">Cannot transfer to/from this channel</string>
    <string name="transfer_error_no_rule">You are not allowed to perform this transaction</string>
    <string name="type_transfer">Transfer</string>
    <string name="type_sell">Airtime Sale</string>
    <string name="type_reverse">Reversal</string>
    <string name="type_partial_reversal">Partial Reversal</string>
    <string name="type_promo_reward">Promotion Reward</string>
    <string name="error_balance">0.0 (err)</string>
    <string name="last_updated_prefix">Last Updated: %s</string>
    <string name="sales_this_week">This Week</string>
    <string name="sales_last_week">Last Week</string>
    <string name="feedback_text">Send Feedback</string>
    <string name="feature_config_failed_title">Connection Problem</string>
    <string name="feature_config_failed_message">Unable to load your app configuration. Please check your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="agent_balance">Agent Balance: %1$s</string>
    <string name="agent_location_last_updated">Location Updated at: %1$s</string>
    <string name="agent_msisdn">Agent MSISDN: %1$s</string>
    <string name="fa_circle" translatable="false">\uf111</string>
</resources>