<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/account_info"
        android:icon="@drawable/ic_outline_info_24"
        android:title="@string/account_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_outline_info_24"
        android:title="@string/feedback_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_outline_info_24"
        android:title="@string/about_us_dropdown_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
