<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:alignItems="center"
    app:flexDirection="column"
    app:justifyContent="center">

    <TextView
        android:id="@+id/weekly_sales_chart_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/weekly_sales"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="center">

        <ProgressBar
            android:id="@+id/sales_target_column_chart_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="48dp"
            android:visibility="gone" />

        <lecho.lib.hellocharts.view.ColumnChartView
            android:id="@+id/weekly_sales_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:paddingStart="32dp"
            android:paddingTop="38dp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:justifyContent="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fa_solid"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:text="@string/fa_circle"
                    android:textAlignment="center"
                    android:textColor="@color/medium_gray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sales_last_week" />

            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:justifyContent="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fa_solid"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:text="@string/fa_circle"
                    android:textAlignment="center"
                    android:textColor="@color/cs_primary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sales_this_week" />

            </com.google.android.flexbox.FlexboxLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>

</com.google.android.flexbox.FlexboxLayout>
