<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="3dp"
    app:cardCornerRadius="9dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:visibility="gone" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/stock_balance_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:orientation="vertical"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="center">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/total_balance_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:alignItems="center"
            app:flexDirection="column"
            app:justifyContent="center"
            tools:visibility="visible">

            <TextView
                android:id="@+id/total_balance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/total_balance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_balance"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="*******" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:orientation="horizontal" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignItems="center"
            app:flexDirection="column"
            app:justifyContent="center">

            <TextView
                android:id="@+id/stock_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/stock_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_balance"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:text="*******" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/bonus_balance_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:alignItems="center"
            app:flexDirection="column"
            app:justifyContent="center"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/bonus_balance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_balance"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bonus_balance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_balance"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="*******" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/on_hold_balance_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:alignItems="center"
            app:flexDirection="column"
            app:justifyContent="center"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/on_hold_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_hold_balance"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/on_hold_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_balance"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="*******" />

        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:id="@+id/last_updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/last_updated_prefix"
            android:textAlignment="center"
            android:textColor="@color/medium_gray"
            android:textSize="12sp"
            android:textStyle="italic"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/balance_visibility_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignItems="center"
            app:flexDirection="column"
            app:justifyContent="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="@color/lighter_gray" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:justifyContent="center">

                <TextView
                    android:id="@+id/show_balances_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/show_balances"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/balance_switch_button"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:checked="false"
                    android:gravity="center"
                    app:showText="false" />

            </com.google.android.flexbox.FlexboxLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>

</androidx.cardview.widget.CardView>